--- a/estilosUX pastinha/index.html
+++ b/estilosUX pastinha/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="grid-layout">
+        <div class="grid-layout header-flex">
             <h1>Estilo<span id="logoux">Ux</span> </h1>
             <nav>
                 <a href="">Home</a>
@@ -23,7 +23,7 @@
 
     <main>
         <section>
-            <img src="" alt="lapís de cor">
+            <img src="images/lapis-de-cor.png" alt="lapís de cor">
 
             <h2>Cores com harmonia</h2>
 
