--- a/estilosUX pastinha/index.html
+++ b/estilosUX pastinha/index.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <div class="grid-layout header-flex">
+
             <h1>Estilo<span id="logoux">Ux</span> </h1>
+
             <nav>
                 <a href="">Home</a>
                 <a href="">Sobre</a>
@@ -22,41 +24,50 @@
     </header>
 
     <main>
-        <section>
-            <img src="images/lapis-de-cor.png" alt="lapís de cor">
 
-            <h2>Cores com harmonia</h2>
+        <div class="grid-layout colunas-flex">
 
-            <h3>Entenda como fazer combinação de cores quee fazem sentido para a sua indentidade visual</h3>
+            <section class="coluna1">
+                <img id="lapis" src="images/lapis-de-cor.png" alt="lapís de cor">
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut sequi illum laboriosam harum
-                excepturi, voluptate libero maxime accusamus deleniti repellat atque voluptates eligendi tempore
-                architecto ut, nisi voluptatibus cumque? Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Incidunt, ipsum. Omnis facilis expedita atque quasi sit nemo aliquid eos numquam necessitatibus. Aliquid
-                pariatur et possimus qui unde deserunt, quisquam libero.</p>
+                <h2>Cores com harmonia</h2>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error aut placeat in officia tenetur
-                voluptatem, cum, totam neque, vero a nisi sapiente! Minus facere laboriosam pariatur nostrum sapiente?
-                Qui, rerum?</p>
+                <h3>Entenda como fazer combinação de cores quee fazem sentido para a sua indentidade visual</h3>
 
-        </section>
-        <aside>
-            <article>
-                <h3>buscar</h3>
-            </article>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut sequi illum laboriosam harum
+                    excepturi, voluptate libero maxime accusamus deleniti repellat atque voluptates eligendi tempore
+                    architecto ut, nisi voluptatibus cumque? Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Incidunt, ipsum. Omnis facilis expedita atque quasi sit nemo aliquid eos numquam necessitatibus.
+                    Aliquid
+                    pariatur et possimus qui unde deserunt, quisquam libero.</p>
 
-            <article>
-                <h3>posts anteriores</h3>
-            </article>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error aut placeat in officia tenetur
+                    voluptatem, cum, totam neque, vero a nisi sapiente! Minus facere laboriosam pariatur nostrum
+                    sapiente?
+                    Qui, rerum?</p>
 
-            <article>
-                <h3>inscreva-se</h3>
-            </article>
-        </aside>
+            </section>
+
+            <aside class="coluna2">
+                <article>
+                    <h3>buscar</h3>
+                </article>
+
+                <article>
+                    <h3>posts anteriores</h3>
+                </article>
+
+                <article>
+                    <h3>inscreva-se</h3>
+                </article>
+            </aside>
+        </div>
     </main>
 
     <footer>
-        <p>Estilo Ux 2023 - Todos os direitos reservados</p>
+        <div class="grid-layout">   
+            <p>Estilo Ux 2023 - Todos os direitos reservados</p>
+        </div>
     </footer>
 </body>
 
